add pdf, style buttons

--- a/app/index.html
+++ b/app/index.html
@@ -74,10 +74,14 @@
         <div class="container">
             <div id="stats-content">
                 <div class="col-xs-12 col-md-6">
-                    <figure><embed src="https://wakatime.com/share/@codebymick/b1318cf2-b51c-4e3d-bc2c-13649c298b65.svg"></embed></figure>
+                    <figure>
+                        <embed src="https://wakatime.com/share/@codebymick/b1318cf2-b51c-4e3d-bc2c-13649c298b65.svg"></embed>
+                    </figure>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                    <figure><embed src="https://wakatime.com/share/@codebymick/e8eafebb-3047-4301-9583-41822ef816ce.svg"></embed></figure>
+                    <figure>
+                        <embed src="https://wakatime.com/share/@codebymick/e8eafebb-3047-4301-9583-41822ef816ce.svg"></embed>
+                    </figure>
                 </div>
             </div>
 
@@ -122,7 +126,7 @@
 
                     </div>
 
-                </>
+                </div>
             </div>
 
         </div>
@@ -163,7 +167,8 @@
                 {{#each contact}}
                 <div class="appointment media openprojectmodal" data-toggle="modal" data-target=""
                      data-name="{{name}}" data-job="{{job}}" data-domain="{{domain}}"
-                     data-qual1="{{qual1}}" data-sample="{{sample}}" data-qual2="{{qual2}}" data-qual3="{{qual3}}" data-resume="{{downloadRes}}"
+                     data-qual1="{{qual1}}" data-sample="{{sample}}" data-qual2="{{qual2}}" data-qual3="{{qual3}}"
+                     data-resume="{{downloadRes}}"
                      data-sampleimage="{{filename}}">
                     <div class="media-left media-top">
                         <!--<img class="media-object appointment-img img-rounded" src="images/inspiration/{{filename}}.jpg"-->
@@ -191,7 +196,7 @@
                             </p>
                             <p>
                                 <a class="btn"
-                                   href="{{downloadRes}}"> Download Résumé </a>
+                                   href="{{downloadRes}}" target="_blank"> Download Résumé </a>
                             </p>
                         </div>
                     </div><!-- media-body -->
