styling for download button

--- a/app/index.html
+++ b/app/index.html
@@ -191,6 +191,7 @@
                             <br>
                             <p class="appointment-reason">{{description}}</p>
                             <br>
+                            <div id="cta-buttons">
                             <p>
                                 <a class="btn" href="mailto:{{contact}}@{{domain}}.com">email me</a>
                             </p>
@@ -198,6 +199,7 @@
                                 <a class="btn"
                                    href="{{downloadRes}}" target="_blank"> Download Résumé </a>
                             </p>
+                            </div>
                         </div>
                     </div><!-- media-body -->
                 </div><!-- appointment media openprojectmodal -->
