add animated close button

--- a/app/index.html
+++ b/app/index.html
@@ -219,7 +219,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
-                        aria-hidden="true">&times;</span></button>
+                        aria-hidden="true"></span></button>
                 <h2 class="modal-title modal-name"></h2>
                 <div class="modal-type"></div>
             </div><!-- modal header -->
@@ -236,7 +236,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
-                        aria-hidden="true">&times;</span></button>
+                        aria-hidden="true"></span></button>
                 <h2 class="modal-title modal-name"></h2>
                 <div class="modal-type"></div>
             </div><!-- modal header -->
@@ -274,7 +274,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
-                        aria-hidden="true">&times;</span></button>
+                        aria-hidden="true"></span></button>
                 <h2 class="modal-title modal-name"></h2>
                 <div class="modal-type"></div>
             </div><!-- modal header -->
@@ -291,7 +291,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
-                        aria-hidden="true">&times;</span></button>
+                        aria-hidden="true"></span></button>
                 <div class="h2"><span class="modal-title modal-name"></span> <span class="modal-type"></span>
                 </div>
             </div><!-- modal header -->
