--- a/app/index.html
+++ b/app/index.html
@@ -87,75 +87,72 @@
 
         </div>
     </div>
-    <div class="page" id="gitStats">
-        <div class="container">
-            <div id="gitStats-content">
-                <div id="git" class="col-xs-12">
-                    <div id="graph" class="graph">
-                        <ul id="months" class="months"></ul>
-                        <ul class="days">
-                            <li>Sun</li>
-                            <li>Mon</li>
-                            <li>Tue</li>
-                            <li>Wed</li>
-                            <li>Thu</li>
-                            <li>Fri</li>
-                            <li>Sat</li>
-                        </ul>
-                        <ul class="squares"></ul>
-                    </div>
+    <!--<div class="page" id="gitStats">-->
+        <!--<div class="container">-->
+            <!--<div id="gitStats-content">-->
+                <!--<div id="git" class="col-xs-12">-->
+                    <!--<div id="graph" class="graph">-->
+                        <!--<ul id="months" class="months"></ul>-->
+                        <!--<ul class="days">-->
+                            <!--<li>Sun</li>-->
+                            <!--<li>Mon</li>-->
+                            <!--<li>Tue</li>-->
+                            <!--<li>Wed</li>-->
+                            <!--<li>Thu</li>-->
+                            <!--<li>Fri</li>-->
+                            <!--<li>Sat</li>-->
+                        <!--</ul>-->
+                        <!--<ul class="squares"></ul>-->
+                    <!--</div>-->
 
-                    <div class="legend-wrapper col-xs-12">
-                        <div class="col-lg-8 col-xs-12">
-                            <div class="description">A summary of my daily pull requests, issues opened, and commits.
-                                (GITLAB & GITHUB)
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-xs-12 text-right">
-                            <div class="contrib-legend text-gray"> Less
-                                <ul class="legend">
-                                    <li class="color-1"></li>
-                                    <li class="color-2"></li>
-                                    <li class="color-3"></li>
-                                    <li class="color-4"></li>
-                                    <li class="color-5"></li>
-                                </ul>
-                                More
-                            </div>
-                        </div>
+                    <!--<div class="legend-wrapper col-xs-12">-->
+                        <!--<div class="col-lg-8 col-xs-12">-->
+                            <!--<div class="description">A summary of my daily pull requests, issues opened, and commits.-->
+                                <!--(GITLAB & GITHUB)-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="col-lg-4 col-xs-12 text-right">-->
+                            <!--<div class="contrib-legend text-gray"> Less-->
+                                <!--<ul class="legend">-->
+                                    <!--<li class="color-1"></li>-->
+                                    <!--<li class="color-2"></li>-->
+                                    <!--<li class="color-3"></li>-->
+                                    <!--<li class="color-4"></li>-->
+                                    <!--<li class="color-5"></li>-->
+                                <!--</ul>-->
+                                <!--More-->
+                            <!--</div>-->
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
-            </div>
+                <!--</div>-->
+            <!--</div>-->
 
-        </div>
-    </div>
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="page" id="projects">
         <div class="container">
 
             <script id="projects-template" type="text/x-handlebars-template">
                 {{#each projects}}
-                <project>
                     <div class="project-row openprojectmodal" data-toggle="modal" data-target="#projectmodal"
                          data-name="{{project}}" data-type="{{type}}" data-link="{{link}}"
                          data-brief="{{brief}}" data-outcome="{{outcome}}" data-image="{{filename}}">
 
+                        <div class="col-xs-12 col-md-6 col-lg-3">
 
-                        <div class="col-xs-12 col-md-6">
+                            <!--<div class="content-wrapper">-->
+                                <!--<h3 class="coral media-heading projects-heading">{{project}}</h3>-->
+                                <!--<p class="black smaller project-type">{{type}}</p>-->
+                                <!--<p class="smaller">{{brief}}</p>-->
+                            <!--</div>-->
                             <img class="full-width" src="images/inspiration/{{filename}}_tn.jpg" alt="{{project}} photo">
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <h3 class="coral media-heading projects-heading">{{project}}</h3>
-                            <p class="black smaller project-type">{{type}}</p>
 
-                            <div class="">
-                                <p class="">{{brief}}</p>
-                            </div>
+
                         </div><!-- media-body -->
                     </div><!-- appointment media openprojectmodal -->
-                </project>
 
 
                 {{/each}}
